Fix dcheck in network_quality_estimator

Adding http_rtt_observation in ReadCachedNetworkQualityEstimate
causes notifying observers.
That can lead to calling ReadCachedNetworkQualityEstimate again.
So some observations can be added between adding
http_rtt_observation and adding transport_rtt_observation.
That ends up to breaking observations timestamp increasing.
To fix this we can use new timestamp each time when add
observation.
Same logic is used in AddDefaultEstimates for example.

R=ryansturm@chromium.org, tbansal@chromium.org

Bug: 841681
Change-Id: Ibed7d5e8e3efca82915d37b1de58df50ae43ff58
Reviewed-on: https://chromium-review.googlesource.com/1052690
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558609}
Former-commit-id: d7f1662fbdcd8664dd6ce365784359219888d485